--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background: #fff;
+  background: #263238;
   color: #212121;
   font-family: "Open Sans", sans-serif;
   display: grid;
