--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background: #fff;
-  color: #212121;
+  background: #212121;
+  color: #fff;
   font-family: "Open Sans", sans-serif;
   display: grid;
   place-items: center;
@@ -51,8 +51,15 @@ body {
 }
 
 .chat-window {
-  width: 300px;
+  width: 500px;
   height: 720px;
+}
+
+@media (max-width: 800px) {
+  .chat-window {
+  width: 100vw;
+  height: 100vh;
+}
 }
 
 .chat-window p {
@@ -74,7 +81,7 @@ body {
 }
 
 .chat-window .chat-body {
-  height: calc(450px - (45px + 70px));
+  height: calc(750px - (45px + 70px));
   border: 1px solid #263238;
   background: #fff;
 
